--- a/MvcModels/Content/Site.css
+++ b/MvcModels/Content/Site.css
@@ -59,3 +59,9 @@ textarea {
 .validation-summary-valid {
     display: none;
 }
+
+label {display: inline-block; width:100px; font-weight:bold; margin: 5px; }
+form label { float: left;}
+input.text-box {float: left; margin: 5px;}
+button[type=submit] {margin-top:5px; float: left; clear: left;}
+form div {clear:both;}
